yacc/y.output
Grammar

    0 $accept: E $end

    1 E: E '+' T
    2  | E '-' T
    3  | T

    4 T: T '*' F
    5  | T '/' F
    6  | F

    7 F: '(' E ')'
    8  | CONSTANT


Terminals, with rules where they appear

$end (0) 0
'(' (40) 7
')' (41) 7
'*' (42) 4
'+' (43) 1
'-' (45) 2
'/' (47) 5
error (256)
CONSTANT (258) 8


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
E (11)
    on left: 1 2 3, on right: 0 1 2 7
T (12)
    on left: 4 5 6, on right: 1 2 3 4 5
F (13)
    on left: 7 8, on right: 4 5 6


State 0

    0 $accept: . E $end

    CONSTANT  shift, and go to state 1
    '('       shift, and go to state 2

    E  go to state 3
    T  go to state 4
    F  go to state 5


State 1

    8 F: CONSTANT .

    $default  reduce using rule 8 (F)


State 2

    7 F: '(' . E ')'

    CONSTANT  shift, and go to state 1
    '('       shift, and go to state 2

    E  go to state 6
    T  go to state 4
    F  go to state 5


State 3

    0 $accept: E . $end
    1 E: E . '+' T
    2  | E . '-' T

    $end  shift, and go to state 7
    '+'   shift, and go to state 8
    '-'   shift, and go to state 9


State 4

    3 E: T .
    4 T: T . '*' F
    5  | T . '/' F

    '*'  shift, and go to state 10
    '/'  shift, and go to state 11

    $default  reduce using rule 3 (E)


State 5

    6 T: F .

    $default  reduce using rule 6 (T)


State 6

    1 E: E . '+' T
    2  | E . '-' T
    7 F: '(' E . ')'

    '+'  shift, and go to state 8
    '-'  shift, and go to state 9
    ')'  shift, and go to state 12


State 7

    0 $accept: E $end .

    $default  accept


State 8

    1 E: E '+' . T

    CONSTANT  shift, and go to state 1
    '('       shift, and go to state 2

    T  go to state 13
    F  go to state 5


State 9

    2 E: E '-' . T

    CONSTANT  shift, and go to state 1
    '('       shift, and go to state 2

    T  go to state 14
    F  go to state 5


State 10

    4 T: T '*' . F

    CONSTANT  shift, and go to state 1
    '('       shift, and go to state 2

    F  go to state 15


State 11

    5 T: T '/' . F

    CONSTANT  shift, and go to state 1
    '('       shift, and go to state 2

    F  go to state 16


State 12

    7 F: '(' E ')' .

    $default  reduce using rule 7 (F)


State 13

    1 E: E '+' T .
    4 T: T . '*' F
    5  | T . '/' F

    '*'  shift, and go to state 10
    '/'  shift, and go to state 11

    $default  reduce using rule 1 (E)


State 14

    2 E: E '-' T .
    4 T: T . '*' F
    5  | T . '/' F

    '*'  shift, and go to state 10
    '/'  shift, and go to state 11

    $default  reduce using rule 2 (E)


State 15

    4 T: T '*' F .

    $default  reduce using rule 4 (T)


State 16

    5 T: T '/' F .

    $default  reduce using rule 5 (T)
